# history-monad

./: README.md  history-monad.cabal
app/: Main.hs
src/: History.hs  HistoryT.hs  MonadHistory.hs
